# coursework-1

./: .gitignore  101  CMakeLists.txt  Depencies.cmake  Makefile  build.sh  imgui.ini  run-clang-format.sh
.github/workflows/: cmake.yml
run_tree/shaders/: shader0.frag  shader0.vert
shaders/: card-default.frag
source/: Main.cpp  Main.cxx  Window.cxx  Window.hxx  card.hh  engine.cc  engine.hh  game.cc  game.hh  main.cc  main.cpp  player.hh
source/engine/: AnimatedSprite.cpp  AnimatedSprite.hpp  Application.cpp  Application.hpp  Logger.cpp  Logger.hpp  ResourceManager.cpp  ResourseManager.hpp  Sprite.cpp  Sprite.hpp  Window.cpp  Window.hpp  _EngineIncludes.hpp
source/engine/rendering/: ShaderWrapper.cpp  ShaderWrapper.hpp  Sprite.hpp  SpriteRenderer.cpp  SpriteRenderer.hpp  TextureWrapper.cpp  TextureWrapper.hpp
source/engine/utility/: CheckError.cpp  CheckError.hpp  Error.hpp  GetSetMacro.hpp
source/game/: Card.hxx  GameBoard.cpp  GameBoard.hpp  GameInfo.hpp  Program.cpp  Program.hpp
source/rendering/: GlUtils.cxx  GlUtils.hxx  RenderManager.cxx  RenderManager.hxx  RenderScene.cxx  RenderScene.hxx  ShaderManager.cxx  ShaderManager.hxx  TextureUtils.cxx  TextureUtils.hxx
source/rendering/add/: AddVertexData.hxx
source/rendering/mgr/: TextureManager.hxx
